@@ -278,7 +278,7 @@ variables in the first statement or update multiple variables in the third state
 <hr class="footer"/>
 <div class="footer">
 <a class="reference" href="user-guide.rst">View document source</a>.
-Generated on: 2004/05/14 11:44:32 CDT.
+Generated on: 2004/05/14 18:09:52 CDT.
 Generated by trip.prl release 1.2.2 from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 </div>
 </body>
