@@ -7,83 +7,11 @@
 #ifndef _PLSMAA_INTERFACE_H_
 #define _PLSMAA_INTERFACE_H_
 
-#include <vector>
+#include "Interface.h"
 
-namespace plasma {
-
-  class Thread;
-
-  typedef std::vector<Thread *> TVect;
-
-  typedef Thread * THandle;
-
-  //
-  // This defines parameters that are adjustable by the user.
-  //
-  struct ConfigParms
-  {
-    int      _stacksize; // size of thread stack
-    bool     _verbose;   // verbosity flag
-    bool     _preempt;   // preemption allowed.
-    unsigned _timeslice; // Time slice length in usec.
-
-    ConfigParms();
-  };
-
-  // The basic thread entry point is a one-argument function.
-  typedef void (UserFunc)(void *);
-
-  // Create a new thread and add it to the ready queue.
-  // Returns a handle to the new thread.
-  THandle pSpawn(UserFunc *f,void *args);
-
-  // Same as above, except that the data pointed to be args is copied to the
-  // thread stack (nbytes worth).  The thread will receive a pointer to this
-  // information.
-  std::pair<THandle,void *> pSpawn(UserFunc *f,int nbytes,void *args);
-
-  // Add a thread to the ready queue, but do not task switch.
-  void pAddReady(THandle);
-
-  // Return a handle to the current thread.
-  THandle pCurThread();
-
-  // Returns true if a thread is finished.
-  bool pDone(const THandle);
-
-  // Wait on the specified thread.
-  void pWait(THandle);
-
-  // Switch to next ready thread.
-  void pYield();
-
-  // Put the current thread to sleep.  When it wakes, it is returned a handle
-  // passed by pWake.
-  int pSleep();
-
-  // Wake the specified thread, giving it the handle value.  This switches
-  // to this thread.
-  void pWake(THandle,int);
-
-  // Kill the current thread.
-  void pTerminate();
-
-  // Lock processor (prevent preemption).
-  void pLock(void);
-
-  // Unlock processor.
-  void pUnlock(void);        
-
-  // Terminate program with return code .
-  void pExit(int code);
-
-  // Abort program gracefully with error message and return exit code -1.
-  void pAbort(char *);
-
-  // Abort program immediately with error message and return exit code -1.
-  void pPanic(char *);
-
-}
+// Dummy class to implement spawn operator.
+pSpawner class Spawn {};
+Spawn spawn;
 
 #endif
 
