@@ -34,6 +34,12 @@ namespace plasma {
     int     _h;
   };
 
+  //////////////////////////////////////////////////////////////////////////////
+  //
+  // Implementation.
+  //
+  //////////////////////////////////////////////////////////////////////////////
+
   template <class Data>
   Data Channel<Data>::read_internal(bool clearready)
   {
