@@ -13,7 +13,8 @@ check_PROGRAMS = \
 	chan5 \
 	chan6 \
 	chan7 \
-	spawn1
+	spawn1 \
+	spawn2
 
 DEPENDENCIES = $(top_srcdir)/src/libplasma.a $(top_srcdir)/parser/Plasma.so
 
@@ -40,6 +41,8 @@ chan6_SOURCES = chan6.pa
 chan7_SOURCES = chan7.pa
 
 spawn1_SOURCES = spawn1.C
+
+spawn2_SOURCES = spawn2.pa
 
 AM_CXXFLAGS = $(CXXFLAGS) -I$(top_srcdir)/src
 
