@@ -3,26 +3,10 @@
 //
 #include <iostream>
 
-#include <plasma-interface.h>
+#include <Interface.h>
 
 using namespace std;
 using namespace plasma;
-
-template<class R>
-class Result {  
-public:
-  Result(pair<THandle,void *> a) : _result((R*)a.second),_t(a.first) {}; 
-  R value() const {
-    if (!pDone(_t)) {
-      pWait(_t);
-    }
-    return *_result;
-  }
-private:
-  R       *_result;
-  THandle  _t;
-
-};
 
 double foo(double a,double b)
 {
@@ -43,17 +27,17 @@ void tmp(void *args)
   ((TmpArgs*)args)->_result = foo(((TmpArgs*)args)->a,((TmpArgs*)args)->b);
 }
 
-Result<double> spawn( double(*fun)(double ,double),double a1,double a2)
+Result<double> spawn(double a1,double a2)
 {
-  TmpArgs ta = {0,a1,a2};
+  TmpArgs ta = {double(),a1,a2};
   return Result<double>(pSpawn(tmp,sizeof(TmpArgs),&ta));
 }
 
 int pMain(int argc,const char *argv[])
 { 
-  Result<double> result1 = spawn(foo,1.1,2.2);
-  Result<double> result2 = spawn(foo,2.7,9.8);
-  Result<double> result3 = spawn(foo,100.45,3.59);
+  Result<double> result1 = spawn(1.1,2.2);
+  Result<double> result2 = spawn(2.7,9.8);
+  Result<double> result3 = spawn(100.45,3.59);
   cout << "Result is:  " << result1.value() << ", " << result2.value() << ", " << result3.value() << endl;
   return 0;
 }
