@@ -1,3 +1,10 @@
+2004-05-17  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Initial implementation of spawn operator.  It currently only
+	processes function calls.
+
+	* Created Result template for storing data from a spawn operation.
+
 2004-05-14  Brian Kahne  <bkahne@ibmoto.com>
 
 	* Added pDone(const THandle), which returns true if the specified
